--- a/taskStyle.css
+++ b/taskStyle.css
@@ -29,6 +29,7 @@ nav{
     display: flex;
     align-items: baseline;
     justify-content: space-between;
+    border-bottom: 1px solid rgba(160, 161, 162, 0.5);
 }
 nav .logo{
     display: flex;
@@ -134,23 +135,17 @@ aside .customizebtn::after{
     font-family: "Font Awesome 6 Free";
     content: "\f013";
     font-weight: 900;
+    display: inline-block;
     padding-left: 7px;
     font-size: 15px;
     color: rgb(72, 76, 82);
+    transform-origin: 65%;
 }
 aside:hover .customizebtn::after{
     animation: spin 1s linear 4;
-    display: inline-block;
-    transform-origin: center center;
 }
 @keyframes spin{
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+    100%{transform: rotate(360deg);}
 }
 header{
     background-color: #3D7A81;
@@ -287,25 +282,115 @@ header .headerRightImg img{
     color: #6C757D;
     padding: 10px;
 }
-
-
-@media screen and (max-width: 770px) {
-    .services .bottomContainer .service{
-        flex-basis: 33.33%;
-    }
+.nearYou{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
-@media screen and (max-width: 600px) {
-    .services .bottomContainer .service{
-        flex-basis: 50%;
-    }
+.nearYou .nearYouLeft{
+    flex-basis: 25%;
+    background-color: #EEF1F6;
+    border-radius: 10px;
+    height: 400px;
+    position: relative;
+    left: 20px;
 }
-@media screen and (max-width: 520px) {
-    
-    .services .bottomContainer .service{
-        flex-basis: 100%;
+.nearYou .nearYouLeft .nearYouLeftHeader{
+    padding: 40px 30px;
+}
+.nearYou .nearYouLeft .nearYouLeftHeader a{
+    font-size: 28px;
+    color: #000000;
+    font-weight: 600;
+    text-align: center;
+    width: 200px;
+}
+.nearYou .nearYouLeft .nearYouLeftHeader p{
+    color: #343b41;
+    text-align: center;
+    margin-top: 20px;
+}
+.nearYou .nearYouLeft img{
+    position: absolute;
+    bottom: 20px;
+    width: 300px;
+}
+.nearYou .nearYouRight{
+    flex-basis: 70%;
+    padding: 20px 20px;
 
-    }
 }
+.nearYouRight .nearYouRightHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+.nearYouRight .nearYouRightHeader h2{
+    font-size: 32px;
+    padding: 0px 0px 20px;
+}
+.nearYouRight .nearYouRightHeader a{
+    color: rgb(17, 24, 39);
+    font-size: 16px;
+}
+.nearYouRight .nearYouRightHeader a:hover{
+    text-decoration: underline;
+}
+.nearYouRight .nearYouRightHeader a::after{
+    font-family: "Font Awesome 6 Free";
+    content: "\f054";
+    padding: 10px;
+    font-weight: 900;
+}
+.nearYouRight .nearYouRightContent{
+    display: flex;
+    flex-wrap: wrap;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox{
+    flex-basis: 50%;
+    display: flex;
+    margin-bottom: 15px;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox:hover .nearYouRightImg{
+    transform: scale(1.1);
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox:hover a{
+    text-decoration: underline;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .nearYouRightImg{
+    width: 100px;
+    margin-right: 20px;
+    border-radius: 8px;
+    overflow: hidden;
+    transition: transform 1s;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .description{
+    /* display: flex;
+    flex-direction: column;
+    justify-content: space-between; */
+    font-size: 14px;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .description a{
+    color:rgb(0, 0, 0);
+    font-size: 16px;
+    padding-bottom: 10px;
+    font-weight: 600;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .description .star p span{
+    color: rgb(78, 80, 84);
+    font-size: 12px;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .description .star{
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+.nearYouRight .nearYouRightContent .nearYouRightBox .description .star i{
+    color: #FC9231;
+    padding-right: 10px;
+}
+
 section.popularProjects{
     padding: 40px;
 }
@@ -340,7 +425,7 @@ section.popularProjects .project .projectheader .overlay{
     position: absolute;
     top: 0px;
     left: 0px;
-    background-color: rgba(0,0,0,0.2);
+    background-color: rgba(0,0,0,0.1);
 }
 section.popularProjects .project .projectheader h3{
     position: absolute;
@@ -350,6 +435,7 @@ section.popularProjects .project .projectheader h3{
 }
 section.popularProjects .project .projectheader img{
     height: 210px;
+    transition: transform 1s;
 }
 section.popularProjects .project .projectheader i{
     position: absolute;
@@ -364,6 +450,9 @@ section.popularProjects .project .projectheader i{
 }
 section.popularProjects .project .projectheader:hover i{
     visibility: visible;
+}
+section.popularProjects .project .projectheader:hover img{
+    transform: scale(1.1);
 }
 section.popularProjects .project .projectheader i:hover{
       animation: pulse; 
@@ -403,24 +492,570 @@ section.popularProjects .project .projectbody .rightProjectBody a:hover{
     color: white;
     background-color: black;
 }
-
+.advice{
+    margin-top: 40px;
+    background-color: #F5F7FA;
+    padding: 90px 40px;
+}
+.advice .adviceHeader{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.advice .adviceHeader h2{
+    font-size: 32px;
+}
+.advice .adviceHeader a{
+    color: #343b41;
+}
+.advice .adviceHeader a:hover{
+    text-decoration: underline;
+}
+.advice .adviceHeader a::after{
+    font-family: "Font Awesome 6 Free";
+    content: "\f054";
+    padding: 10px;
+    font-weight: 900;
+    font-size: 12px;
+}
+.advice .adviceContent{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.advice .adviceContent .adviceBox{
+    flex-basis: 50%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+.advice .adviceContent .adviceBox .adviseImg{
+    overflow: hidden;
+    border-radius: 10px;
+    width: 130px;
+    margin-right: 20px;
+    transition: transform 1s;
+}
+.advice .adviceContent .adviceBox .description{
+    width: 60%;
+    margin-bottom: 60px;
+}
+.advice .adviceContent .adviceBox .description .p1{
+    padding: 5px;
+    background-color: #e7e8ea;
+    color: rgb(17, 24, 39);
+    display: inline-block;
+    border-radius: 2px 5px;
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+.advice .adviceContent .adviceBox .description a{
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #000000;
+    font-weight: 600;
+}
+.advice .adviceContent .adviceBox .description a:hover{
+    text-decoration: underline;
+}
+.advice .adviceContent .adviceBox:hover .adviseImg{
+    transform: scale(1.05);
+}
+.advice .adviceContent .adviceBox .description .p2{
+    color: #343b41;
+    margin-bottom: 10px;
+}
+.advice .adviceContent .adviceBox .description .p3{
+    color: #7b8083;
+}
+.howItWorks{
+    padding: 50px 40px;
+}
+.howItWorks h2{
+    font-size: 32px;
+}
+.howItWorks p{
+    font-size: 18px;
+    color: #343b41;
+    margin-bottom: 30px;
+}
+.howItWorks .howBoxes{
+    display: flex;
+    justify-content: space-between;
+}
+.howItWorks .howBoxes .howBox i{
+    font-size: 40px;
+    color: #343b41;
+}
+.howItWorks .howBoxes .howBox h3{
+    margin: 20px 0px;
+}
+.howItWorks .howBoxes .howBox p{
+    color: #6C757D;
+}
+.grow{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+.grow .growLeft{
+    background-color: #3D7A81;
+    padding: 120px 40px;
+    flex-basis: 50%;
+}
+.grow .growLeft h2{
+    color: white;
+    font-size: 32px;
+    width: 400px;
+}
+.grow .growLeft .growbtns{
+    display: flex;
+}
+.grow .growLeft .growbtns a{
+    padding: 14px 24px;
+    border-radius: 10px;
+    display: inline-block;
+    color: white;
+}
+.grow .growLeft .growbtns .red{
+    background-color: #D85151;
+    margin-right: 20px;
+}
+.grow .growLeft .growbtns .red:hover{
+    background-color: #C92D2D;
+}
+.grow .growLeft .growbtns .red::before{
+    font-family: "Font Awesome 6 Free";
+    content: "\2b";
+    padding-right: 10px;
+    font-weight: 900;
+    font-size: 14px;
+    color: white;
+}
+.grow .growLeft .growbtns .trans{
+    border-color: white;
+}
+.grow .growLeft .growbtns .trans:hover{
+    background-color: white;
+    color: black;
+}
+.grow .growLeft .growbtns .trans::after{
+    font-family: "Font Awesome 6 Free";
+    content: "\f054";
+    padding: 0px 10px;
+    font-weight: 900;
+    font-size: 14px;
+    color: white;
+    display: inline-block;
+    transition: transform 0.5s, color 0.5s;
+}
+.grow .growLeft .growbtns .trans:hover::after{
+    color: #000000;
+    transform: translateX(10px);
+}
+.growMiddle{
+    position: absolute;
+    top: 40%;
+    left: calc(50% - 100px);
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+.growMiddle p{
+    color: white;
+    text-align: center;
+    position: relative;
+    top: 40%;
+    animation: rotate 10s linear infinite;
+}
+@keyframes rotate {
+    100%{transform: rotate(360deg);}
+}
+.growRight{
+    flex-basis: 50%;
+}
+.get{
+    display: flex;
+    width: calc(100% - 60px);
+    margin: 30px;
+    background-color: #FBEEEE;
+    border-radius: 10px;
+}
+.get .getLeft{
+    padding: 50px;
+    flex-basis: 50%;
+}
+.get .getLeft h2{
+    font-size: 40px;
+}
+.get .getLeft p{
+    color: #6C757D;
+    margin-bottom: 20px;
+}
+.get .getLeft .getbtns{
+    display: flex;
+}
+.get .getLeft .getbtns a{
+    display: inline-block;
+    background-color: #0f1216;
+    padding: 12px 18px;
+    border-radius: 10px;
+    margin-right: 15px;
+    color: white;
+    transition: background-color 0.5s;
+}
+.get .getLeft .getbtns a:hover{
+    background-color: #333D4C;
+}
+.get .getLeft .getbtns .apple::before{
+    font-family: "Font Awesome 6 Brands";
+    content: "\f179";
+    padding-right: 10px;
+    font-weight: 400;
+    font-size: 20px;
+    color: white;
+    display: inline-block;
+}
+.get .getLeft .getbtns .google::before{
+    font-family: "Font Awesome 6 Brands";
+    content: "\f3ab";
+    padding-right: 10px;
+    font-weight: 400;
+    font-size: 20px;
+    color: white;
+    display: inline-block;
+}
+.get .getRight{
+    flex-basis: 50%;
+}
+.prices{
+    padding: 50px 40px;
+}
+.prices .pricesHeader{
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.prices .pricesHeader h2{
+    font-size: 32px;
+}
+.prices .pricesHeader a{
+    color: #343b41;
+}
+.prices.pricesHeader a:hover{
+    text-decoration: underline;
+}
+.prices .pricesHeader a::after{
+    font-family: "Font Awesome 6 Free";
+    content: "\f054";
+    padding: 10px;
+    font-weight: 900;
+    font-size: 12px;
+}
+.prices .pricesContent{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.prices .pricesContent .priceBox{
+    flex-basis: 45%;
+    border: 1px solid #bec3c6;
+    border-radius: 10px;
+    display: flex;
+    margin-bottom: 20px;
+}
+.prices .pricesContent .priceBox .leftBox{
+    flex-basis: 40%;
+    margin-right: 20px;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    overflow: hidden;
+}
+.prices .pricesContent .priceBox .leftBox img{
+    height: 100%;
+    transition: transform 1s;
+}
+.prices .pricesContent .priceBox:hover img{
+    transform: scale(1.1);
+}
+.prices .pricesContent .priceBox .rightBox{
+    padding: 20px 0px;
+}
+.prices .pricesContent .priceBox .rightBox a{
+    color: #000000;
+    font-weight: 600;
+    margin: 15px 0px;
+}
+.prices .pricesContent .priceBox:hover a{
+    text-decoration: underline;
+}
+.prices .pricesContent .priceBox .rightBox .description{
+    display: flex;
+    font-size: 14px;
+    margin-bottom: 15px;
+}
+.prices .pricesContent .priceBox .rightBox .description .star{
+    display: flex;
+    margin-right: 20px;
+}
+.prices .pricesContent .priceBox .rightBox .description .star i{
+    color: #FC9231;
+}
+.prices .pricesContent .priceBox .rightBox .description .star p span{
+    font-size: 12px;
+    color: #6C757D;
+}
+.prices .pricesContent .priceBox .rightBox .btn{
+    font-weight: 400;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 10px 15px;
+    font-size: 14px;
+}
+.prices .pricesContent .priceBox:hover .btn{
+    text-decoration: none;
+}
+.prices .pricesContent .priceBox .btn:hover{
+    background-color: #000000;
+    color: white;
+}
+footer{
+    background-color: #111827;
+    padding: 0px 40px;
+    color: white;
+}
+footer .sub{
+    display: flex;
+    justify-content: space-between;
+    padding: 60px 0px 40px;
+    color: white;
+    border-bottom: 0.5px solid #474849;
+}
+footer .sub .leftSub{
+    display: flex;
+    align-items: baseline;
+}
+footer .sub .leftSub p{
+    margin-right: 20px;
+    font-size: 20px;
+    font-weight: 600;
+}
+footer .sub .leftSub p::before{
+    font-family: "Font Awesome 6 Free";
+    content: "\f0e0";
+    padding-right: 10px;
+    font-weight: 400;
+    font-size: 25px;
+    color: rgb(202, 208, 217);
+    display: inline-block;
+}
+footer .sub .leftSub .red{
+    color: white;
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #D85151;
+    border-radius: 10px;
+}
+footer .sub .leftSub .red:hover{
+    background-color: #C92D2D;
+}
+footer .sub .rightSub{
+    display: flex;
+    font-size: 20px;
+}
+footer .sub .rightSub p{
+    color: #9ba1a6;
+    margin-right: 20px;
+}
+footer .sub .rightSub a{
+    color: white;
+    font-weight: 600;
+}
+footer .lists{
+    padding: 40px 0px;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+footer .lists .listsLeft .logo{
+    display: flex;
+    align-items: baseline;
+}
+footer .lists .listsLeft .logo i{
+    font-size: 24px;
+    height: 36px;
+    color: white;
+    background-color: #D85151;
+    padding: 5px;
+    border-radius: 20px;
+    border-bottom-right-radius: 5px;
+    margin: 10px;
+}
+footer .lists .listsLeft .logo p{
+    font-size: 24px;
+    font-weight: 600;
+}
+footer .lists .listsLeft .logos{
+    display: flex;
+    margin: 30px 0px;
+}
+footer .lists .listsLeft>p{
+    width: 300px;
+    font-size: 14px;
+    color: #abb0b9;
+}
+footer .lists .listsLeft .logos i{
+    padding: 10px;
+    border-radius: 50%;
+    background-color: #4E5562;
+    color: white;
+    margin-right: 10px;
+}
+footer .lists .listsRight{
+    display: flex;
+    flex-basis: 60%;
+}
+footer .lists .listsRight h2{
+    font-size: 20px;
+}
+footer .lists .listsRight a{
+    color: #b6b9bf;
+    font-size: 14px;
+    margin: 8px 0px;
+}
+footer .lists .listsRight a:hover{
+    text-decoration: underline;
+}
+footer .lists .listsRight .popular .list1 ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+footer .lists .listsRight .popular .list1 ul li{
+    flex-basis: 50%;
+}
+footer .cities{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+footer .cities h2{
+    flex-basis: 15%;
+    font-size: 20px;
+}
+footer .cities .citiesbtns ul{
+    display: flex;
+    flex-wrap: wrap;
+}
+footer .cities .citiesbtns ul li{
+    flex-basis: 12.5%;
+}
+footer .cities .citiesbtns a{
+    color: #9ba1a6;
+    font-size: 14px;
+    display: inline-block;
+    padding: 10px 15px;
+    border-radius: 20px;
+    border: 1px solid #23282c;
+    margin-bottom: 10px;
+    transition: border 0.2s
+}
+footer .cities .citiesbtns a:hover{
+    border: 1px solid white;
+}
+footer .rights{
+    padding: 30px 0px;
+    display: flex;
+    justify-content: space-between;
+}
+footer .rights .made p{
+    color: #6C757D;
+    font-size: 14px;
+}
+footer .rights .made p span{
+    color: white;
+}
+footer .rights .imgs ul{
+    display: flex;
+}
 .swiper-pagination-bullet-active{
     background-color: #343b41 !important;
 }
-@media screen and (max-width: 870px) {
-  
-    section.popularProjects{
+
+/* @media screen and (max-width: 770px) {
+    .services .bottomContainer .service{
+        flex-basis: 33.33%;
+    }
+}
+@media screen and (max-width: 600px) {
+    .services .bottomContainer .service{
+        flex-basis: 50%;
+    }
+} */
+@media screen and (max-width: 520px) {
+    
+    nav .navList{
+        display: none;
+    }
+    .headerLeftImg, .headerRightImg{
+        display: none;
+    }
+    .headerContent{
+        width: 400px;
+    }
+    .headerContent .headerSearch{
+        width: 400px;
+        flex-wrap: wrap;
+    }
+    .headerContent .headerSearch input{
+        width: 120px;
+    }
+    .headerContent .headerSearch #searchbtn{
+        flex-basis: 100%;
+        display: inline-block;
+        text-align: center;
+    }
+     .headerContent .headerlist{
+        margin-top: 20px;
+     }
+     .nearYouRight .nearYouRightHeader{
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+    }
+    .services .bottomContainer .service{
+        flex-basis: 50%;
+    }
+    .nearYouLeft{
+        display: none;
+    }
+        section.popularProjects{
         flex-direction: row;
         flex-wrap: wrap;
     }
     section.popularProjects .project{
 
-        flex: 0 0 50%;
+        flex: 0 0 100%;
     }
-}
-@media screen and (max-width: 500px) {
-  
-    section.popularProjects{
-        flex-direction: column;
+    .growMiddle, .growRight{
+        display: none;
     }
+    .get{
+        flex-wrap: wrap;
+    }
+    .prices .pricesContent .priceBox{
+        flex-basis: 100%;
+    }
+    footer .lists{
+        flex-wrap: wrap;
+    }
+    footer .cities .citiesbtns ul li{
+    flex-basis: 33.33%;
+    }
+    footer .rights .made{
+        display: none;
+    }
+
 }
